--- a/index.html
+++ b/index.html
@@ -1,45 +1,64 @@
 <!doctype html>
 <html lang="th">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AI Learning Assistant</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Learn-Ru-Dee</title>
+
   <style>
+    /* พื้นหลังเรียบแบบ ChatGPT */
     body{
-      margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif;
-      min-height:100vh;display:grid;place-items:center;
-      background:linear-gradient(135deg,#f7f7f7,#e9f1ff);
+      margin:0;
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif;
+      min-height:100vh;
+      display:grid;
+      place-items:center;
+      background:#f7f7f8;
     }
-    /* กรอบแชตฝังกลางหน้า */
+
+    /* กรอบสนทนาแบบฝัง กลางหน้า (คงหัวแถบสี/โลโก้ไว้) */
     .embed{
-      max-width:980px;width:92%;height:78vh;background:#fff;border:1px solid #eee;
-      border-radius:20px;box-shadow:0 8px 28px rgba(0,0,0,.08);overflow:hidden;
+      width:min(960px,96vw);
+      height:calc(100vh - 64px);
+      background:#fff;
+      border:1px solid #e5e7eb;
+      border-radius:12px;
+      box-shadow:none;
+      overflow:hidden;
     }
-    /* ซ่อนปุ่มลอย/แถบ Start new chat */
-    .vfrc-widget-launcher, .vfrc-start-new-chat, button[data-testid="start-new-chat"]{display:none!important;}
+
+    /* ใช้พื้นที่คุยเต็มกรอบ */
+    .vfrc-chat--embedded, .vfrc-chat { height:100%!important; }
+
+    /* ซ่อนปุ่มลอย/ปุ่ม start new chat ของวิดเจ็ต */
+    .vfrc-widget-launcher,
+    .vfrc-start-new-chat,
+    button[data-testid="start-new-chat"]{ display:none!important; }
+
+    /* หมายเหตุ: ไม่ซ่อน .vfrc-header เพื่อให้โลโก้ + แถบสียังอยู่ */
   </style>
 </head>
 <body>
 
+  <!-- แชตฝังกลางหน้า -->
   <div id="flat-chat" class="embed"></div>
 
+  <!-- Voiceflow widget (embedded + autostart) -->
   <script type="text/javascript">
-  (function(d,t){
-    /* เคลียร์ session เก่า กันค้าง "Start new chat" */
-    try{ Object.keys(localStorage).forEach(k=>{ if(k.startsWith('vf-')||k.includes('voiceflow')) localStorage.removeItem(k); }); }catch(e){}
-    var v=d.createElement(t), s=d.getElementsByTagName(t)[0];
-    v.onload=function(){
-      window.voiceflow.chat.load({
-        verify:{ projectID:"68a5dcd15718c4ef73b9b235" },
-        url:"https://general-runtime.voiceflow.com",
-        versionID:"production",
-        render:{ mode:'embedded', target: document.getElementById('flat-chat') },
-        autostart:true
-      });
-    };
-    v.src="https://cdn.voiceflow.com/widget-next/bundle.mjs";
-    v.type="text/javascript"; s.parentNode.insertBefore(v,s);
-  })(document,"script");
+    (function(d,t){
+      var v=d.createElement(t), s=d.getElementsByTagName(t)[0];
+      v.onload=function(){
+        window.voiceflow.chat.load({
+          verify:{ projectID:"68a5dcd15718c4ef73b9b235" },
+          url:"https://general-runtime.voiceflow.com",
+          versionID:"production",
+          render:{ mode:"embedded", target: document.getElementById("flat-chat") },
+          autostart:true
+        });
+      };
+      v.src="https://cdn.voiceflow.com/widget-next/bundle.mjs";
+      v.type="text/javascript"; s.parentNode.insertBefore(v,s);
+    })(document,"script");
   </script>
 
 </body>
