--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Learn-Ru-Dee</title>
 
   <style>
-    /* พื้นหลังเรียบแบบ ChatGPT */
+    /* พื้นหลังเรียบ */
     body{
       margin:0;
       font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif;
@@ -16,31 +16,31 @@
       background:#f7f7f8;
     }
 
-    /* กรอบสนทนาแบบฝัง กลางหน้า (คงหัวแถบสี/โลโก้ไว้) */
+    /* กรอบสนทนากลางหน้า */
     .embed{
       width:min(960px,96vw);
-      height:calc(100vh - 64px);
+      height:calc(100vh - 32px);
       background:#fff;
       border:1px solid #e5e7eb;
       border-radius:12px;
-      box-shadow:none;
       overflow:hidden;
     }
 
     /* ใช้พื้นที่คุยเต็มกรอบ */
     .vfrc-chat--embedded, .vfrc-chat { height:100%!important; }
 
-    /* ซ่อนปุ่มลอย/ปุ่ม start new chat ของวิดเจ็ต */
+    /* ซ่อนปุ่มลอย/ปุ่ม start chat ของวิดเจ็ต */
     .vfrc-widget-launcher,
     .vfrc-start-new-chat,
     button[data-testid="start-new-chat"]{ display:none!important; }
 
-    /* หมายเหตุ: ไม่ซ่อน .vfrc-header เพื่อให้โลโก้ + แถบสียังอยู่ */
+    /* ซ่อนแถบหัว (โลโก้/แถบสี) */
+    .vfrc-header{ display:none!important; }
   </style>
 </head>
 <body>
 
-  <!-- แชตฝังกลางหน้า -->
+  <!-- พื้นที่ฝังแชต -->
   <div id="flat-chat" class="embed"></div>
 
   <!-- Voiceflow widget (embedded + autostart) -->
@@ -63,8 +63,3 @@
 
 </body>
 </html>
-
-/* ซ่อนแถบหัวสีของวิดเจ็ต */
-.vfrc-header{ display:none !important; }
-
-
